--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/qrImageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="20dp"
