--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -11,7 +12,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="20dp"
-        android:background="@color/black" />
+        android:background="#EEEEEE" />
 
     <Button
         android:id="@+id/clearButton"
@@ -34,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:autoLink="web"
+        android:gravity="center"
+        android:padding="5dp"
         android:textSize="20sp"
         tools:text="some content" />
 
